Remove use of Collectors.toList()
Reduce verbosity and prevent a future modernizer violation.

Change-Id: I8f69002a29696d98eff9a4ab4b25694bc029a993
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>